# MonBot

./: LICENSE  MonBot.cabal  README.md  monit.sh
app/: ConfigHost1.hs  Main.hs  MonBot.hs
