name:                MonBot
version:             1.0.1.0
synopsis:            monitoring bot on XMPP
description:         Please see README.md
homepage:            http://github.com/githubuser/MonBot#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Diemand
maintainer:          avd@sbclab.com
copyright:           2016 Alexander Diemand
category:            Monitoring
build-type:          Simple
cabal-version:       >=1.10

executable MonBot
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, ScopedTypeVariables
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  ghc-prof-options:    -fprof-auto
  other-modules:       MonBot
  build-depends:       base >= 4.7 && < 5
                     , monad-logger
                     , network-protocol-xmpp == 0.4.8
                     , text, bytestring
                     , transformers
                     , process
                     , network, libxml-sax, xml-types

